--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/dragon-desing.css">
         <link rel="stylesheet" type="text/css" href="fontawesome/css/all.css">
-        <title>Hello World</title>
+        <title>TAREO EN CAMPO</title>
     </head>
     <body>
         <div id="app"></div>
