--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
                 // alert("success!");
             }
             window.url_base="http://192.168.1.242:80/api";
+            // window.url_base="http://172.16.1.112:8080/api";
             window.db = window.openDatabase("asistencia", "1.0", "AppTareo", 200000);
         </script>
         <script type="text/javascript" src="js/app.js"></script>
