--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/dragon-desing.css">
         <link rel="stylesheet" type="text/css" href="fontawesome/css/all.css">
-        <title>Hello World</title>
+        <title>TAREO EN CAMPO</title>
+        <style>
+            .modal .modal-dialog {
+                -webkit-transform: scale(0.1);
+                -moz-transform: scale(0.1);
+                -ms-transform: scale(0.1);
+                transform: scale(0.1);
+                top: 0px;
+                opacity: 0;
+                -webkit-transition: all 0.3s;
+                -moz-transition: all 0.3s;
+                transition: all 0.3s;
+            }
+
+            .modal.show .modal-dialog {
+                -webkit-transform: scale(1);
+                -moz-transform: scale(1);
+                -ms-transform: scale(1);
+                transform: scale(1);
+                -webkit-transform: translate3d(0, 0px, 0);
+                transform: translate3d(0, 0px, 0);
+                opacity: 1;
+            }
+        </style>
     </head>
     <body>
         <div id="app"></div>
@@ -16,7 +40,7 @@
             function errorCB(tx, err) {
                 console.log(err);
                 
-                alert("Error processing SQL: "+err.message);
+                alert("Error processing SQL: "+err);
             }
 
             // Transaction success callback
@@ -25,6 +49,7 @@
                 // alert("success!");
             }
             window.url_base="http://192.168.1.242:80/api";
+            // window.url_base="http://172.16.1.112:8080/api";
             window.db = window.openDatabase("asistencia", "1.0", "AppTareo", 200000);
         </script>
         <script type="text/javascript" src="js/app.js"></script>
