--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,8 @@
             function successCB() {
                 // alert("success!");
             }
-            window.url_base="http://192.168.1.242:80/api";
+            window.url_base="http://127.0.0.1:8000/api";
+            // window.url_base="http://192.168.1.242:80/api";
             // window.url_base="http://172.16.1.112:8080/api";
             window.db = window.openDatabase("asistencia", "1.0", "AppTareo", 200000);
         </script>
