--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -33,6 +33,9 @@
                 transform: translate3d(0, 0px, 0);
                 opacity: 1;
             }
+            .modal .modal-body{
+                padding: 1.25rem;
+            }
         </style>
     </head>
     <body>
