--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -6,6 +6,9 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/dragon-desing.css">
         <link rel="stylesheet" type="text/css" href="fontawesome/css/all.css">
         <title>TAREO EN CAMPO</title>
@@ -31,6 +34,9 @@
                 transform: translate3d(0, 0px, 0);
                 opacity: 1;
             }
+            .modal .modal-body{
+                padding: 1.25rem;
+            }
         </style>
     </head>
     <body>
@@ -48,8 +54,9 @@
             function successCB() {
                 // alert("success!");
             }
-            window.url_base="http://192.168.1.242:80/api";
-            // window.url_base="http://172.16.1.112:8080/api";
+            // window.url_base="http://172.0.0.1:8000/api";
+            // window.url_base="http://192.168.1.242:8000/api";
+            window.url_base="http://172.16.1.112:80/api";
             window.db = window.openDatabase("asistencia", "1.0", "AppTareo", 200000);
         </script>
         <script type="text/javascript" src="js/app.js"></script>
