--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/dragon-desing.css">
@@ -54,8 +54,8 @@
                 // alert("success!");
             }
             // window.url_base="http://172.0.0.1:8000/api";
-            window.url_base="http://192.168.1.242:8000/api";
-            // window.url_base="http://172.16.1.112:80/api";
+            // window.url_base="http://192.168.1.242:8000/api";
+            window.url_base="http://172.16.1.112:80/api";
             window.db = window.openDatabase("asistencia", "1.0", "AppTareo", 200000);
         </script>
         <script type="text/javascript" src="js/app.js"></script>
